301-ISTIO/ingress_gw_istio_nginx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doumx
  labels:
    istio-injection: enabled
    schedulemutator: disabled
