301-ISTIO/ingress_gw_istio_nginx/deploymeny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doumx-deployment
  namespace: doumx
  labels:
    app: doumx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: doumx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: doumx
    spec:
      containers:
      - name: doumx
        image: httpd
