301-ISTIO/ingress_gw_istio_nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-demo
  namespace: doumx
spec:
  selector:
    app: doumx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
