301-ISTIO/ingress_gw_istio_nginx/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-nginx
  namespace: doumx
spec:
  hosts:
  - "demo.nginx.unstable.ecom.gl.rocks"
  gateways:
  - istio-system/https-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: service-demo
